# programming-challenges

advent-of-code/: Justfile  Makefile  README.md  pyproject.toml
advent-of-code/.scripts/: frontmatter.py  gen_badges.py  get_input.sh
advent-of-code/2023/19/: Makefile  README.md  debug  solve1.py  solve2.py
advent-of-code/2023/23/: Makefile  solve.py
advent-of-code/2024/05/: solve.py
advent-of-code/2024/07/: README.md
advent-of-code/2024/09/: solve.py
advent-of-code/2024/14/: solve.py
advent-of-code/2024/15/: solve.py
advent-of-code/2024/16/: solve.py
advent-of-code/2024/18/: solve.py
advent-of-code/2024/19/: solve.py
advent-of-code/2024/21/: solve.py
advent-of-code/2024/24/: solve.py
advent-of-code/2024/25/: solve.py
advent-of-code/2025/01/: README.md  solve.py
advent-of-code/2025/02/: README.md  solve.py
advent-of-code/2025/04/: solve.py
advent-of-code/2025/1/: solve.py
advent-of-code/2025/10/: Makefile  README.md  solve.py
advent-of-code/2025/11/: Makefile  README.md  dotviz.py  solve.py
advent-of-code/2025/12/: Makefile  README.md  solve.ipynb
advent-of-code/2025/2/: solve.py
advent-of-code/2025/3/: README.md  solve.py
advent-of-code/2025/4/: Makefile  README.md  solve.py  viz.py
advent-of-code/2025/5/: README.md  solve.py
advent-of-code/2025/6/: README.md  solve.py
advent-of-code/2025/7/: README.md  solve.py
advent-of-code/2025/8/: README.md  naive.ipynb  solve.py
advent-of-code/2025/9/: README.md  example2  solve.py
competitive-programming/: .clang-format  .gitignore  README.md
data-puzzles/: .gitignore  (+2 more)
(+357 files in other folders)
