[project]
name = "advent-of-code"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "PyYAML",
    "Requests",
    "bidict",
    "coconut",
    "hypothesis",
    "jinja2>=3.1.6",
    "joblib>=1.5.2",
    "jupyterlab>=4.5.0",
    "lark",
    "matplotlib",
    "networkx",
    "numpy",
    "pandas",
    "plotly>=6.5.0",
    "pytest",
    "rich",
    "scikit_learn",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "sympy",
    "toolz",
    "tqdm",
    "z3-solver",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
